諛고룷 以鍮? CORS ?ㅼ젙 媛쒖꽑 諛?Vercel ?ㅼ젙 ?뚯씪 異붽?

--- a/server/env.example
+++ b/server/env.example
@@ -1,5 +1,8 @@
 PORT=5003
-MONGODB_URI=mongodb://localhost:27017/shopingmall
+# MongoDB Atlas 연결 URL (우선 사용)
+MONGODB_ATLAS_URL=your-mongodb-atlas-connection-string
+# MONGODB_ATLAS_URL이 없을 경우 로컬 MongoDB 사용
+# mongodb://localhost:27017/shopingmall
 NODE_ENV=development
 JWT_SECRET=your-secret-key-change-in-production
 JWT_EXPIRE=7d
