--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "server"
   ],
   "scripts": {
-    "start": "cd server && npm start",
-    "dev": "cd server && npm run dev",
-    "install": "cd server && npm install"
+    "start": "npm --workspace server start",
+    "dev": "npm --workspace server run dev"
   },
   "engines": {
     "node": ">=18.0.0"
